# fieldinf

./: AUTHORS  ChangeLog  Makefile  Makefile.am  NEWS  README  configure.ac  cosmopar.f90  hyper2F1.f90  infbackmain.f90  infbg.f90  infbgfunc.f90  infbgmodel.F90  infbounds.f90  infinout.f90  infmatter.F90  infpert.f90  infpertmain.f90  infpotential.f90  infpowspline.f90  infprec.f90  infsigma.f90  infsric.F90  infsric.f90  infsrmodel.F90  inftorad.f90  libaspic.h  power_inf.f90  specialinf.f90  srevol.f90  srlib.h
src/: InitialFieldInf.f90  Makefile.am  Makefile_noauto  binfspline.f90  fieldmain.f90  fieldprec.f90  gurumain.f90  infbg.f90  infbgfunc.f90  infbgmodel.F90  infbgspline.f90  infbounds.f90  infdilaton.f90  infio.f90  infmatter.F90  infpert.f90  infpotential.f90  infpowspline.f90  infprec.f90  infsigma.f90  infsolvers.f90  infsolvers.h  infsric.F90  inftorad.f90  infunits.F90  libaspic.h  power_inf.f90
tests/: testsuite.at
